--- a/build.gradle
+++ b/build.gradle
@@ -62,5 +62,7 @@ dependencies {
 	testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
 	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 	testCompile('cglib:cglib-nodep:3.2.2')
+	testCompile ('com.github.tomakehurst:wiremock:2.17.0')
 	testCompile group: 'com.github.fakemongo', name: 'fongo', version: '1.3.1'
+
 }
