--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 	compile group: 'org.yaml', name: 'snakeyaml', version: '1.19'
 	compile group: 'com.google.guava', name: 'guava', version: '23.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+	compile group: 'com.kcthota', name: 'emoji4j', version: '4.0'
+	compile 'com.vdurmont:emoji-java:4.0.0'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
