--- a/build.gradle
+++ b/build.gradle
@@ -62,5 +62,6 @@ dependencies {
 	testCompile('io.projectreactor:reactor-test')
 	testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
 	testCompile('cglib:cglib-nodep:3.2.2')
-	testCompile ('com.github.tomakehurst:wiremock:2.17.0')
+	testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.2.4.RELEASE'
+//	testCompile ('com.github.tomakehurst:wiremock:2.17.0')
 }
